# TS-App-olist

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
home/: urls.py
home/templates/: base.html  index.html
project/: settings.py  urls.py
register_car/: apps.py  form.py  models.py  tests.py  urls.py  views.py
register_car/migrations/: 0001_initial.py
register_car/templates/: car_form.html  car_list_all.html  register_car.html  register_car_form.html  register_car_view.html
